# praktikum-gib-mir-mal-ne-wago

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  anleitung_v1.0.docx  bom.md  handout.md  ideas.md  pyproject.toml
docs/: _config.yml  index.md
firmware/firmware_old_platformio/: platformio.ini
firmware/firmware_v1.0/: gib_mir_mal_ne_wago.atsln
firmware/gib_mir_mal_ne_wago/: gib_mir_mal_ne_wago.componentinfo.xml  gib_mir_mal_ne_wago.cproj  gib_mir_mal_ne_wago.ino  main.c
firmware/gib_mir_mal_ne_wago/Debug/: gib_mir_mal_ne_wago.hex  main.d
firmware_old_platformio/: platformio.ini
firmware_old_platformio/src/: gib-mir-mal-ne-wago.cpp
firmware_v1.0/gib_mir_mal_ne_wago/: gib_mir_mal_ne_wago.componentinfo.xml  gib_mir_mal_ne_wago.cproj  main.c
firmware_v1.0/gib_mir_mal_ne_wago/Debug/: Makefile  gib_mir_mal_ne_wago.elf  gib_mir_mal_ne_wago.hex  gib_mir_mal_ne_wago.lss  gib_mir_mal_ne_wago.map  main.d  (+1 more)
halter/: halter_mit_batteriefach.scad  halter_mit_batteriefach.stl
images/: gibmirmalnewago.xcf
pcb/: 1-PCB_PCB_Lauflicht 28.json  1-Schematic_Lauflicht 28.json  PCB_ISP_Pinout.json  PCB_praktikum-gib-mir-mal-ne-wago.json  PCB_praktikum-gib-mir-mal-ne-wago_V1.0_ATTiny24A-PU-V1.0_2024-04-26.json  SCH_praktikum-gib-mir-mal-ne-wago-v2.0_2025-08-18.json  SCH_praktikum-gib-mir-mal-ne-wago.json  SCH_praktikum-gib-mir-mal-ne-wago_V1.0_2024-04-26.json
solder_assistant/: loetschablone-gib-mir-mal-ne-wago.stl  loetschablone-gib-mir-mal-ne-wago.stp
src/: gib-mir-mal-ne-wago.cpp
src/gmmnw/: __init__.py
stand/: halter_mit_batteriefach.scad
(+12 files in other folders)
